handle feedback + fix sonnar warning