@@ -60,6 +60,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
@@ -657,7 +658,7 @@ class ProductServiceImplTest extends BaseSetup {
     mockProduct.setId(SAMPLE_PRODUCT_ID);
     mockProduct.setMarketDirectory(SAMPLE_PRODUCT_PATH);
     mockProduct.setRepositoryName(SAMPLE_PRODUCT_REPOSITORY_NAME);
-    List<Product> products = Arrays.asList(mockProduct);
+    List<Product> products = List.of(mockProduct);
     when(productRepo.findAll()).thenReturn(products);
     when(productRepo.save(any(Product.class))).thenReturn(mockProduct);
     GHTag ghTagVersionOne = new GHTag();
@@ -673,7 +674,7 @@ class ProductServiceImplTest extends BaseSetup {
     mockProduct.setId(SAMPLE_PRODUCT_ID);
     mockProduct.setRepositoryName(SAMPLE_PRODUCT_REPOSITORY_NAME);
     mockProduct.setFirstPublishedDate(new Date());
-    when(productRepo.findAll()).thenReturn(Arrays.asList(mockProduct));
+    when(productRepo.findAll()).thenReturn(List.of(mockProduct));
     assertTrue(productService.syncFirstPublishedDateOfAllProducts());
   }
 
@@ -693,7 +694,7 @@ class ProductServiceImplTest extends BaseSetup {
   void testSyncFirstPublishedDateOfAllProductsFailed() throws IOException {
     Product mockProduct = new Product();
     mockProduct.setRepositoryName(SAMPLE_PRODUCT_REPOSITORY_NAME);
-    List<Product> products = Arrays.asList(mockProduct);
+    List<Product> products = List.of(mockProduct);
     when(productRepo.findAll()).thenReturn(products);
     when(gitHubService.getRepositoryTags(SAMPLE_PRODUCT_REPOSITORY_NAME)).thenThrow(
         new IOException("Mocked IOException"));
@@ -708,7 +709,7 @@ class ProductServiceImplTest extends BaseSetup {
     mockProduct.setId(SAMPLE_PRODUCT_ID);
     mockProduct.setMarketDirectory(SAMPLE_PRODUCT_PATH);
     mockProduct.setRepositoryName(SAMPLE_PRODUCT_REPOSITORY_NAME);
-    List<Product> products = Arrays.asList(mockProduct);
+    List<Product> products = List.of(mockProduct);
     when(productRepo.findAll()).thenReturn(products);
     when(productRepo.save(any(Product.class))).thenReturn(mockProduct);
     GHTag ghTagVersionOne = mock(GHTag.class);
@@ -730,10 +731,10 @@ class ProductServiceImplTest extends BaseSetup {
     mockProduct.setId(SAMPLE_PRODUCT_ID);
     mockProduct.setMarketDirectory(SAMPLE_PRODUCT_PATH);
     mockProduct.setRepositoryName(SAMPLE_PRODUCT_REPOSITORY_NAME);
-    List<Product> products = Arrays.asList(mockProduct);
+    List<Product> products = List.of(mockProduct);
     when(productRepo.findAll()).thenReturn(products);
     GHTag ghTag = mock(GHTag.class);
-    List<GHTag> tags = Arrays.asList(ghTag);
+    List<GHTag> tags = Collections.singletonList(ghTag);
     GHCommit ghCommit = mock(GHCommit.class);
     when(ghTag.getCommit()).thenReturn(ghCommit);
     when(ghCommit.getCommitDate()).thenThrow(
